fixed layout issues

--- a/betfsm/betfsm_gui/betfsm-visualizer/frontend/style.css
+++ b/betfsm/betfsm_gui/betfsm-visualizer/frontend/style.css
@@ -46,11 +46,26 @@ body {
   height: 100vh;
   background-color: 333;
   font-family: Helvetica, Arial, sans-serif;
+  flex-direction: column;
+  margin:0px;
 }
-header, footer {
+header {
   background-color: #00407a;
   color: #52bdec;
-  padding: 1rem;
+  padding: 5px;
+  flex: 0 0 auto;
+}
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #00407a;
+  padding: 5px;
+  border-top: 1px solid #ccc;
+}
+.toolbar {
+    flex: 0 0 auto;
 }
 .splitline {
     display:flex;
@@ -58,7 +73,7 @@ header, footer {
     align-items: center;
 }
 main {
-  flex: 1;
+  flex: 1 1 auto;
   overflow: auto; /* adds scroll bar if needed */
   display: flex;
   justify-content: center;
@@ -66,8 +81,7 @@ main {
 }
 .area {
   max-width: 100%;
-  height: auto;
+  /*max-height: inherit;*/
   overflow: auto;
-  border: 1px;
-  solid #ccc;
+  border: 1px solid #ccc;
 }
